--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link href="css/bootstrap.css" rel="stylesheet" />
+    <link href="css/bootstrap-theme.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
-    test
+
+    <div class="bg-dark m-0 w-100 py-5">
+
+        <div class="container HeaderContainer w-75 py-4 px-5">
+            <h1>Portfolio</h1>
+            <h1>Rainers Strads</h1>
+        </div>
+
+        <div class="container MainContainer w-75 px-5">
+            <img class="img-fluid my-4" src="placeholder.jpg" alt="Image">
+        </div>
+
+    </div>
+
+    <script type = "text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type = "text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+    <script type = "text/javascript" src="js/bootstrap.min.js"></script>
+    <script type = "text/javascript" src="js/script.js"></script>
 </body>
 </html>
