Arrow and more design

--- a/index.html
+++ b/index.html
@@ -9,17 +9,30 @@
     <link href="style.css" rel="stylesheet">
     <title>Portfolio</title>
 </head>
-<body>
+<body class="d-flex justify-content-center">
 
-    <div class="bg-dark m-0 w-100 py-5">
+    <div class="m-0 w-75 py-5">
 
-        <div class="container HeaderContainer w-75 py-4 px-5">
+        <div class="container HeaderContainer1 py-1 ml-0"></div>
+        <div class="container HeaderContainer2 py-1 my-1 mr-3"></div>
+
+        <div class="container TitleContainer w-100 py-4 px-5">
             <h1>Portfolio</h1>
-            <h1>Rainers Strads</h1>
+            <h1><b>Rainers Strads</b></h1>
+            <h4>A student from Valmieras tehnikums</h4>
+            <hr class="CustomHr py-1">
+            <h6 class="text-center">Here's a brief showcase of the projects I've worked on</h6>
+            <div class="d-flex justify-content-center mt-5">
+                <div class="ArrowContainer py-auto w-auto">
+                    <div class="CustomArrow"></div>
+                </div>
+            </div>
         </div>
 
-        <div class="container MainContainer w-75 px-5">
+        <div class="container MainContainer w-100 py-4 px-5">
             <img class="img-fluid my-4" src="placeholder.jpg" alt="Image">
+            <hr class="">
+            <p>aaaaaa</p>
         </div>
 
     </div>
