--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="container HeaderContainer1 py-1 ml-0"></div>
         <div class="container HeaderContainer2 py-1 my-1 mr-3"></div>
 
-        <div class="container TitleContainer w-100 py-4 px-5">
+        <div class="container TitleContainer w-100 pt-4 px-5">
             <h1>Portfolio</h1>
             <h1><b>Rainers Strads</b></h1>
             <h4>A student from Valmieras tehnikums</h4>
-            <hr class="CustomHr py-1">
+            <hr class="CustomHr">
             <h6 class="text-center">Here's a brief showcase of the projects I've worked on</h6>
             <div class="d-flex justify-content-center mt-5">
                 <div class="ArrowContainer py-auto w-auto">
@@ -29,10 +29,25 @@
             </div>
         </div>
 
-        <div class="container MainContainer w-100 py-4 px-5">
-            <img class="img-fluid my-4" src="placeholder.jpg" alt="Image">
-            <hr class="">
-            <p>aaaaaaaaaa</p>
+        <div class="container MainContainer w-100 py-4 mt-3 px-5">
+            <b>My most recent project - a web scraper.</b>
+            <p>It automatically gathers data from an ad listing site and displays it in a more readable way.
+             Created using PHP, the Laravel framework and Laravel-goutte scraper.
+             I also used a MySQL database, Bootstrap and various smaller add-ons.</p>
+            <a href="https://bitbucket.org/rrainerss/adscraperv2/src/master/">Link to the repository</a>
+            <hr class="CustomHr">
+            <img class="img-fluid my-4 CustomImage" src="img/portfolio_adscraper.png" alt="There should be an image here">
+            
+
+        </div>
+
+        <div class="container MainContainer w-100 py-4 mt-3 px-5">
+            <b>A lightweight and responsive website</b>
+            <p>This site was assembled during my time at a local web development company. My contributions
+             include some of the HTML structure, responsive Bootstrap and recreating the planned design with CSS.</p>
+            <a href="https://www.zivjumaja.lv">Link to the website</a>
+            <hr class="CustomHr">
+            <img class="img-fluid my-4 CustomImage" src="img/portfolio_zivjumaja.png" alt="There should be an image here">
         </div>
 
     </div>
