--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container TitleContainer w-100 pt-4 px-5">
             <h1>Portfolio</h1>
             <h1><b>Rainers Strads</b></h1>
-            <h4>A student from Valmieras tehnikums</h4>
+            <h4>A student at Valmieras tehnikums</h4>
             <hr class="CustomHr">
             <h6 class="text-center">Here's a brief showcase of the projects I've worked on</h6>
             <div class="d-flex justify-content-center mt-5">
